--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:studio": "prisma studio",
     "dev": "nodemon"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
@@ -18,7 +22,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@types/dotenv": "^8.2.3",
+    "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
