--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:studio": "prisma studio",
+    "prisma:seed": "ts-node ./prisma/seed.ts",
     "dev": "nodemon"
   },
   "devDependencies": {
